kubernetes/migrator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wangle-migrator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wangle-migrator
      network: wangle
  template:
    metadata:
      labels:
        app: wangle-migrator
        network: wangle
    spec:
      containers:
      - name: wangle-migrator
        image: wangle.migrator
        imagePullPolicy: Never
      restartPolicy: Always
