kubernetes/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wangle
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network: wangle
  podSelector:
    matchLabels:
      network: wangle
